# whitehathackerai

./: .coveragerc  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: models.yaml  platforms.yaml  settings.yaml  tools.yaml
config/profiles/: aggressive.yaml  balanced.yaml  custom.yaml  stealth.yaml
config/scopes/: example_scope.yaml
data/: known_infrastructure_ips.json
data/benchmark/: manifests.json
data/wordlists/: directories.txt  parameters.txt  subdomains.txt
docker/: Dockerfile  Dockerfile.gpu  benchmark-lab.yaml  docker-compose.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  LLM_RESEARCH_REPORT.md  TOOL_CATALOG.md  WORKFLOW_GUIDE.md
models/: README.md
scripts/: benchmark_runner.py  download_models.sh  e2e_test.py  generate_payloads.py  health_check.sh  install-git-hooks.sh  launch_gui.py  launch_gui.sh  lmstudio_remote.sh  setup_go_tools.sh  setup_kali_tools.sh  setup_wordlists.sh  ssh_tunnel.sh  test_api_keys.py  test_hackerone.py
src/: __init__.py  cli.py  main.py
src/analysis/: __init__.py  attack_surface.py  benchmark.py  benchmark_lab.py  correlation_engine.py  diff_engine.py  finding_cluster.py  global_finding_store.py  host_profiler.py  impact_assessor.py  output_aggregator.py  response_intelligence.py  scan_profiler.py  scan_quality_report.py  severity_calculator.py  threat_model.py  vulnerability_analyzer.py
src/brain/: __init__.py  engine.py  intelligence.py  router.py
src/file_manager/: __init__.py  output_organizer.py
src/fp_engine/: __init__.py  evidence_quality_gate.py  fp_detector.py
src/gui/: __init__.py  app.py  main_window.py
src/integrations/: __init__.py  asset_db.py  cache.py  database.py  diff_alerts.py  notification.py  queue.py
src/reporting/: __init__.py  auto_draft.py  remediation.py  report_generator.py
src/tools/: __init__.py  base.py  discovery.py  executor.py  parser.py  register_tools.py  registry.py
src/utils/: __init__.py  constants.py  crypto_utils.py  dev_diagnostics.py  file_utils.py  json_utils.py  logger.py  network_utils.py  param_intelligence.py  perf_profiler.py  rate_limiter.py  response_validator.py  sanitizer.py  scope_validator.py  spa_detector.py  verbose_display.py
src/workflow/: __init__.py  adaptive_strategy.py  agent_context.py  agent_orchestrator.py  campaign_manager.py  continuous_monitor.py  decision_engine.py  human_gateway.py  orchestrator.py  result_aggregator.py  scan_monitor.py  session_manager.py  state_machine.py  task_scheduler.py  tool_chain.py  tool_unit.py
tests/: __init__.py  conftest.py
tests/regression/: test_deep_audit_fixes.py  test_deep_audit_fixes_v2.py  test_deep_audit_fixes_v3.py  test_diff_engine.py  test_exploit_evidence.py  test_final_deficiency_fixes.py  test_fp_regression_gitlab.py  test_p0_bug_fixes.py  test_phase6_continuous_ops.py  test_revolution_v4.py  test_v11_modules.py  test_v13_v14_gap_closures.py  test_v17_production_fixes.py  test_v18_url_list_fixes.py  test_v19_type_safety_hardening.py  test_v20_serialization_robustness.py  (+17 more)
(+476 files in other folders)
